@@ -160,26 +160,6 @@ install-dbus: create-dirs
 	ln -sf  ../init.d/dbus ${EXTDIR}/rc.d/rc5.d/S29dbus
 	ln -sf  ../init.d/dbus ${EXTDIR}/rc.d/rc6.d/K30dbus
 
-install-dovecot: create-dirs
-	install -m ${MODE} blfs/init.d/dovecot       ${EXTDIR}/rc.d/init.d/
-	ln -sf  ../init.d/dovecot ${EXTDIR}/rc.d/rc0.d/K78dovecot
-	ln -sf  ../init.d/dovecot ${EXTDIR}/rc.d/rc1.d/K78dovecot
-	ln -sf  ../init.d/dovecot ${EXTDIR}/rc.d/rc2.d/K78dovecot
-	ln -sf  ../init.d/dovecot ${EXTDIR}/rc.d/rc3.d/S27dovecot
-	ln -sf  ../init.d/dovecot ${EXTDIR}/rc.d/rc4.d/S27dovecot
-	ln -sf  ../init.d/dovecot ${EXTDIR}/rc.d/rc5.d/S27dovecot
-	ln -sf  ../init.d/dovecot ${EXTDIR}/rc.d/rc6.d/K78dovecot
-
-install-wicd: create-dirs
-	install -m ${MODE} blfs/init.d/wicd ${EXTDIR}/rc.d/init.d/
-	ln -sf  ../init.d/wicd ${EXTDIR}/rc.d/rc0.d/K20wicd
-	ln -sf  ../init.d/wicd ${EXTDIR}/rc.d/rc1.d/K20wicd
-	ln -sf  ../init.d/wicd ${EXTDIR}/rc.d/rc2.d/S30wicd
-	ln -sf  ../init.d/wicd ${EXTDIR}/rc.d/rc3.d/S30wicd
-	ln -sf  ../init.d/wicd ${EXTDIR}/rc.d/rc4.d/S30wicd
-	ln -sf  ../init.d/wicd ${EXTDIR}/rc.d/rc5.d/S30wicd
-	ln -sf  ../init.d/wicd ${EXTDIR}/rc.d/rc6.d/K20wicd
-
 install-dhcpd: create-dirs
 	install -m ${MODE} blfs/init.d/dhcpd       ${EXTDIR}/rc.d/init.d/dhcpd
 	install -m ${CONFMODE} blfs/sysconfig/dhcpd ${EXTDIR}/sysconfig/dhcpd
@@ -190,6 +170,26 @@ install-dhcpd: create-dirs
 	ln -sf  ../init.d/dhcpd ${EXTDIR}/rc.d/rc4.d/S30dhcpd
 	ln -sf  ../init.d/dhcpd ${EXTDIR}/rc.d/rc5.d/S30dhcpd
 	ln -sf  ../init.d/dhcpd ${EXTDIR}/rc.d/rc6.d/K30dhcpd
+
+install-dovecot: create-dirs
+	install -m ${MODE} blfs/init.d/dovecot       ${EXTDIR}/rc.d/init.d/
+	ln -sf  ../init.d/dovecot ${EXTDIR}/rc.d/rc0.d/K78dovecot
+	ln -sf  ../init.d/dovecot ${EXTDIR}/rc.d/rc1.d/K78dovecot
+	ln -sf  ../init.d/dovecot ${EXTDIR}/rc.d/rc2.d/K78dovecot
+	ln -sf  ../init.d/dovecot ${EXTDIR}/rc.d/rc3.d/S27dovecot
+	ln -sf  ../init.d/dovecot ${EXTDIR}/rc.d/rc4.d/S27dovecot
+	ln -sf  ../init.d/dovecot ${EXTDIR}/rc.d/rc5.d/S27dovecot
+	ln -sf  ../init.d/dovecot ${EXTDIR}/rc.d/rc6.d/K78dovecot
+
+install-elogind: create-dirs
+	install -m ${MODE} blfs/init.d/elogind ${EXTDIR}/rc.d/init.d/
+	ln -sf  ../init.d/elogind ${EXTDIR}/rc.d/rc0.d/K24elogind
+	ln -sf  ../init.d/elogind ${EXTDIR}/rc.d/rc1.d/K24elogind
+	ln -sf  ../init.d/elogind ${EXTDIR}/rc.d/rc2.d/S31elogind
+	ln -sf  ../init.d/elogind ${EXTDIR}/rc.d/rc3.d/S31elogind
+	ln -sf  ../init.d/elogind ${EXTDIR}/rc.d/rc4.d/S31elogind
+	ln -sf  ../init.d/elogind ${EXTDIR}/rc.d/rc5.d/S31elogind
+	ln -sf  ../init.d/elogind ${EXTDIR}/rc.d/rc6.d/K24elogind
 
 install-exim: create-dirs
 	install -m ${MODE} blfs/init.d/exim       ${EXTDIR}/rc.d/init.d/
@@ -267,6 +267,16 @@ install-krb5: create-dirs
 	ln -sf ../init.d/krb5 ${EXTDIR}/rc.d/rc5.d/S28krb5
 	ln -sf ../init.d/krb5 ${EXTDIR}/rc.d/rc6.d/K42krb5
 
+install-lightdm: create-dirs
+	install -m ${MODE} blfs/init.d/lightdm        ${EXTDIR}/rc.d/init.d/
+	ln -sf  ../init.d/lightdm ${EXTDIR}/rc.d/rc0.d/K05lightdm
+	ln -sf  ../init.d/lightdm ${EXTDIR}/rc.d/rc1.d/K05lightdm
+	ln -sf  ../init.d/lightdm ${EXTDIR}/rc.d/rc2.d/K05lightdm
+	ln -sf  ../init.d/lightdm ${EXTDIR}/rc.d/rc3.d/K05lightdm
+	ln -sf  ../init.d/lightdm ${EXTDIR}/rc.d/rc4.d/K05lightdm
+	ln -sf  ../init.d/lightdm ${EXTDIR}/rc.d/rc5.d/S95lightdm
+	ln -sf  ../init.d/lightdm ${EXTDIR}/rc.d/rc6.d/K05lightdm
+
 install-lprng: create-dirs
 	install -m ${MODE} blfs/init.d/lprng      ${EXTDIR}/rc.d/init.d/
 	ln -sf  ../init.d/lprng ${EXTDIR}/rc.d/rc0.d/K00lprng
@@ -286,6 +296,10 @@ install-lxdm: create-dirs
 	ln -sf  ../init.d/lxdm ${EXTDIR}/rc.d/rc4.d/K05lxdm
 	ln -sf  ../init.d/lxdm ${EXTDIR}/rc.d/rc5.d/S95lxdm
 	ln -sf  ../init.d/lxdm ${EXTDIR}/rc.d/rc6.d/K05lxdm
+
+install-mountcgroupfs: create-dirs
+	install -m ${MODE} blfs/init.d/mountcgroupfs ${EXTDIR}/rc.d/init.d/
+	ln -sf ../init.d/mountcgroupfs ${EXTDIR}/rc.d/rcS.d/S55mountcgroupfs
 
 install-mysql: create-dirs
 	install -m ${MODE} blfs/init.d/mysql      ${EXTDIR}/rc.d/init.d/
@@ -346,17 +360,6 @@ install-ntpd: create-dirs
 	ln -sf  ../init.d/ntpd ${EXTDIR}/rc.d/rc4.d/S26ntpd
 	ln -sf  ../init.d/ntpd ${EXTDIR}/rc.d/rc5.d/S26ntpd
 	ln -sf  ../init.d/ntpd ${EXTDIR}/rc.d/rc6.d/K46ntpd
-
-install-slapd: create-dirs
-	install -m ${MODE} blfs/init.d/slapd ${EXTDIR}/rc.d/init.d/slapd
-	install -m ${CONFMODE} blfs/sysconfig/slapd ${EXTDIR}/sysconfig/slapd
-	ln -sf  ../init.d/slapd ${EXTDIR}/rc.d/rc0.d/K46slapd
-	ln -sf  ../init.d/slapd ${EXTDIR}/rc.d/rc1.d/K46slapd
-	ln -sf  ../init.d/slapd ${EXTDIR}/rc.d/rc2.d/S25slapd
-	ln -sf  ../init.d/slapd ${EXTDIR}/rc.d/rc3.d/S25slapd
-	ln -sf  ../init.d/slapd ${EXTDIR}/rc.d/rc4.d/S25slapd
-	ln -sf  ../init.d/slapd ${EXTDIR}/rc.d/rc5.d/S25slapd
-	ln -sf  ../init.d/slapd ${EXTDIR}/rc.d/rc6.d/K46slapd
 
 install-postfix: create-dirs
 	install -m ${MODE} blfs/init.d/postfix    ${EXTDIR}/rc.d/init.d/
@@ -448,16 +451,6 @@ install-sddm: create-dirs
 	ln -sf  ../init.d/sddm ${EXTDIR}/rc.d/rc5.d/S95sddm
 	ln -sf  ../init.d/sddm ${EXTDIR}/rc.d/rc6.d/K05sddm
 
-install-lightdm: create-dirs
-	install -m ${MODE} blfs/init.d/lightdm        ${EXTDIR}/rc.d/init.d/
-	ln -sf  ../init.d/lightdm ${EXTDIR}/rc.d/rc0.d/K05lightdm
-	ln -sf  ../init.d/lightdm ${EXTDIR}/rc.d/rc1.d/K05lightdm
-	ln -sf  ../init.d/lightdm ${EXTDIR}/rc.d/rc2.d/K05lightdm
-	ln -sf  ../init.d/lightdm ${EXTDIR}/rc.d/rc3.d/K05lightdm
-	ln -sf  ../init.d/lightdm ${EXTDIR}/rc.d/rc4.d/K05lightdm
-	ln -sf  ../init.d/lightdm ${EXTDIR}/rc.d/rc5.d/S95lightdm
-	ln -sf  ../init.d/lightdm ${EXTDIR}/rc.d/rc6.d/K05lightdm
-
 install-sendmail: create-dirs
 	install -m ${MODE} blfs/init.d/sendmail   ${EXTDIR}/rc.d/init.d/
 	ln -sf  ../init.d/sendmail ${EXTDIR}/rc.d/rc0.d/K25sendmail
@@ -477,6 +470,17 @@ install-smartd: create-dirs
 	ln -sf  ../init.d/smartd ${EXTDIR}/rc.d/rc4.d/S21smartd
 	ln -sf  ../init.d/smartd ${EXTDIR}/rc.d/rc5.d/S21smartd
 	ln -sf  ../init.d/smartd ${EXTDIR}/rc.d/rc6.d/K70smartd
+
+install-slapd: create-dirs
+	install -m ${MODE} blfs/init.d/slapd ${EXTDIR}/rc.d/init.d/slapd
+	install -m ${CONFMODE} blfs/sysconfig/slapd ${EXTDIR}/sysconfig/slapd
+	ln -sf  ../init.d/slapd ${EXTDIR}/rc.d/rc0.d/K46slapd
+	ln -sf  ../init.d/slapd ${EXTDIR}/rc.d/rc1.d/K46slapd
+	ln -sf  ../init.d/slapd ${EXTDIR}/rc.d/rc2.d/S25slapd
+	ln -sf  ../init.d/slapd ${EXTDIR}/rc.d/rc3.d/S25slapd
+	ln -sf  ../init.d/slapd ${EXTDIR}/rc.d/rc4.d/S25slapd
+	ln -sf  ../init.d/slapd ${EXTDIR}/rc.d/rc5.d/S25slapd
+	ln -sf  ../init.d/slapd ${EXTDIR}/rc.d/rc6.d/K46slapd
 
 install-soprano: create-dirs
 	install -m ${MODE} blfs/init.d/soprano    ${EXTDIR}/rc.d/init.d/
@@ -561,6 +565,16 @@ install-vsftpd: create-dirs
 	ln -sf ../init.d/vsftpd ${EXTDIR}/rc.d/rc4.d/S32vsftpd
 	ln -sf ../init.d/vsftpd ${EXTDIR}/rc.d/rc5.d/S32vsftpd
 	ln -sf ../init.d/vsftpd ${EXTDIR}/rc.d/rc6.d/K28vsftpd
+
+install-wicd: create-dirs
+	install -m ${MODE} blfs/init.d/wicd ${EXTDIR}/rc.d/init.d/
+	ln -sf  ../init.d/wicd ${EXTDIR}/rc.d/rc0.d/K20wicd
+	ln -sf  ../init.d/wicd ${EXTDIR}/rc.d/rc1.d/K20wicd
+	ln -sf  ../init.d/wicd ${EXTDIR}/rc.d/rc2.d/S30wicd
+	ln -sf  ../init.d/wicd ${EXTDIR}/rc.d/rc3.d/S30wicd
+	ln -sf  ../init.d/wicd ${EXTDIR}/rc.d/rc4.d/S30wicd
+	ln -sf  ../init.d/wicd ${EXTDIR}/rc.d/rc5.d/S30wicd
+	ln -sf  ../init.d/wicd ${EXTDIR}/rc.d/rc6.d/K20wicd
 
 install-winbindd: create-dirs
 	install -m ${MODE} blfs/init.d/winbindd      ${EXTDIR}/rc.d/init.d/
@@ -725,6 +739,16 @@ uninstall-dovecot:
 	rm -f ${EXTDIR}/rc.d/rc5.d/S27dovecot
 	rm -f ${EXTDIR}/rc.d/rc6.d/K78dovecot
 
+uninstall-elogind:
+	rm -f ${EXTDIR}/rc.d/init.d/elogind
+	rm -f ${EXTDIR}/rc.d/rc0.d/K24elogind
+	rm -f ${EXTDIR}/rc.d/rc1.d/K24elogind
+	rm -f ${EXTDIR}/rc.d/rc2.d/K24elogind
+	rm -f ${EXTDIR}/rc.d/rc3.d/S31elogind
+	rm -f ${EXTDIR}/rc.d/rc4.d/S31elogind
+	rm -f ${EXTDIR}/rc.d/rc5.d/S31elogind
+	rm -f ${EXTDIR}/rc.d/rc6.d/K24elogind
+
 uninstall-exim:
 	rm -f ${EXTDIR}/rc.d/init.d/exim
 	rm -f ${EXTDIR}/rc.d/rc0.d/K25exim
@@ -820,6 +844,10 @@ uninstall-lxdm:
 	rm -f ${EXTDIR}/rc.d/rc4.d/K05lxdm
 	rm -f ${EXTDIR}/rc.d/rc5.d/S95lxdm
 	rm -f ${EXTDIR}/rc.d/rc6.d/K05lxdm
+
+uninstall-mountcgroupfs: create-dirs
+	rm -f ${EXTDIR}/rc.d/init.d/mountcgroupfs
+	rm -f ${EXTDIR}/rc.d/rcS.d/S55mountcgroupfs
 
 uninstall-mysql:
 	rm -f ${EXTDIR}/rc.d/init.d/mysql
@@ -1100,10 +1128,9 @@ uninstall-xinetd:
 	install-bind \
 	install-bluetooth \
 	install-cups \
-	install-saslauthd \
-	install-wicd \
 	install-dhcpd \
 	install-dovecot \
+	install-elogind \
 	install-exim \
 	install-fcron \
 	install-gdm \
@@ -1112,12 +1139,14 @@ uninstall-xinetd:
 	install-iptables \
 	install-krb5 \
 	install-lprng \
+	install-mountcgroupfs \
 	install-mysql \
 	install-netfs \
 	install-networkmanager \
 	install-nfs-client \
 	install-nfs-server \
 	install-ntpd \
+	install-saslauthd \
 	install-slapd \
 	install-postfix \
 	install-postgresql \
@@ -1135,6 +1164,7 @@ uninstall-xinetd:
 	install-vsftpd \
 	install-unbound \
 	install-virtuoso \
+	install-wicd \
 	install-winbindd \
 	install-xinetd \
 	uninstall-atd \
@@ -1146,10 +1176,9 @@ uninstall-xinetd:
 	uninstall-bind \
 	uninstall-bluetooth \
 	uninstall-cups \
-	uninstall-saslauthd \
-	uninstall-wicd \
 	uninstall-dhcpd \
 	uninstall-dovecot \
+	uninstall-elogind \
 	uninstall-exim \
 	uninstall-fcron \
 	uninstall-gdm \
@@ -1158,6 +1187,7 @@ uninstall-xinetd:
 	uninstall-iptables \
 	uninstall-krb5 \
 	uninstall-lprng \
+	uninstall-mountcgroupfs \
 	uninstall-mysql \
 	uninstall-netfs \
 	uninstall-networkmanager \
@@ -1171,6 +1201,7 @@ uninstall-xinetd:
 	uninstall-random \
 	uninstall-rsync \
 	uninstall-samba \
+	uninstall-saslauthd \
 	uninstall-sddm \
 	uninstall-sendmail \
 	uninstall-soprano \
@@ -1181,5 +1212,6 @@ uninstall-xinetd:
 	uninstall-unbound \
 	uninstall-virtuoso \
 	uninstall-vsftpd   \
+	uninstall-wicd \
 	uninstall-winbindd \
 	uninstall-xinetd
