@@ -1,0 +1,67 @@
+#!/bin/sh
+########################################################################
+# Begin elogind
+#
+# Description : Startup script for elogind
+#
+# Authors     : DJ Lucas - dj@linuxfromscratch.org
+#
+# Version     : BLFS 8.4
+#
+########################################################################
+
+### BEGIN INIT INFO
+# Provides:            elogind
+# Required-Start:
+# Should-Start:        dbus
+# Required-Stop:
+# Should-Stop:
+# Default-Start:       3 4 5
+# Default-Stop:        0 1 2 6
+# Short-Description:   Manages user sessions
+# Description:         Starts the elogind user session management daemon
+# X-LFS-Provided-By:   BLFS
+### END INIT INFO
+
+. /lib/lsb/init-functions
+
+case "${1}" in
+   start)
+      install -vdm644 /run/systemd 2>&1>/dev/null &&
+      log_info_msg "Startng elogind..." &&
+      test -d /run/systemd && start_daemon /lib/elogind/elogind -D
+      evaluate_retval
+      ;;
+
+    stop)
+      log_info_msg "Stopping elogind..."
+      killproc /lib/elogind/elogind
+      evaluate_retval
+      ;;
+
+   reload)
+      log_info_msg "Reloading elogind..."
+      pid=`pidofproc elogind`
+      kill -HUP "${pid}"
+      evaluate_retval
+      ;;
+
+   restart)
+      ${0} stop
+      sleep 1
+      ${0} start
+      ;;
+
+   status)
+      statusproc /lib/elogind/elogind
+      ;;
+
+   *)
+      echo "Usage: ${0} {start|stop|reload|restart|status}"
+      exit 1
+      ;;
+esac
+
+exit 0
+
+# End elogind
