@@ -1,3 +1,8 @@
+2018-12-16  DJ Lucas <dj@linuxfromscratch.org>
+   * Add elogind bootscript
+   * Add mountcgroupfs bootscript
+   * Reorder Makefile (partially)
+
 2018-01-05  Bruce Dubbs <bdubbs@linuxfromscratch.org>
    * Add lightdm bootscript
 
